--- a/package.json
+++ b/package.json
@@ -20,11 +20,22 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/server": "^4.10.4",
+    "@graphql-tools/graphql-file-loader": "^8.0.1",
+    "@graphql-tools/load": "^8.0.2",
+    "@neo4j/graphql": "^5.3.4",
+    "@neo4j/graphql-ogm": "^5.3.4",
+    "@nestjs/apollo": "^12.1.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/graphql": "^12.1.1",
     "@nestjs/platform-express": "^10.0.0",
+    "dotenv": "^16.4.5",
+    "graphql": "^16.8.1",
+    "neo4j-driver": "^5.20.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "zod": "^3.23.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
